@@ -83,6 +83,17 @@ class Fn : precompile {
     return $new_string;
   }
 
+  static method chr : string ($unicode_code_point : int) {
+    
+    my $is_unicode_scalar_value = Unicode->is_unicode_scalar_value($unicode_code_point);
+    my $utf8_char = (string)undef;
+    if ($is_unicode_scalar_value) {
+      $utf8_char = Unicode->uchar_to_utf8($unicode_code_point);
+    }
+
+    return $utf8_char;
+  }
+
   static method copy_array_byte : byte[] ($nums : byte[]) {
     return copy $nums;
   }
