@@ -460,6 +460,11 @@ my $nan_re = qr/(nan|ind)/i;
   ok(SPVM::TestCase::Lib::Fn3->rindex_len);
 }
 
+# chr
+{
+  ok(SPVM::TestCase::Lib::Fn1->chr);
+}
+
 # All object is freed
 my $end_memory_blocks_count = SPVM::get_memory_blocks_count();
 is($end_memory_blocks_count, $start_memory_blocks_count);
